+ Added @if function to Wess. The difference with @is is in the syntax: "@is (test, true, false)" can be done inline (so basically it's an @inlineif), while "@if test" is on its own line, and should be followed by an @endif on the same tab level, with a potential @else in between. This should allow for cleaner tests. And just like @is, they're nestable. Replaced a few @is calls with @if. (Class-CSS.php, common.css, index.css) * Made more functions stricter when it comes to whitespace (i.e. not accept linebreaks within their declarations): rgb(a), hsl(a), gradient, @import, @charset, @mixin, mixes, properties, reset, virtual, unextends (extends was already done this way), final, @remove, @dynamic, @ifnull, @is and @if. Also on variable declarations, which made me realize that their regex is a bit flawed, someone please remind me to rework it. (Class-CSS.php) @ Note: I've compiled a before/after version and the result is the same, so it's probably bug-free. + Added more support for @is and @if to manage variables, but it's still not built in. The idea is to call the plugin twice: once before the mixins, to do the globals, and once after, to deal with local variables mostly. And no, this isn't ready yet. Dunno if it'll even be ready before the first release. (Class-CSS.php) * Some cleaner code in the media quota edit page. (ManageMedia.php)

--- a/Themes/default/skins/common.css
+++ b/Themes/default/skins/common.css
@@ -9,13 +9,14 @@
 	display: inline-block
 	vertical-align: middle
 	// IE6/7 need layout to show inline-block divs... And a default right margin from my experience...
-	@is (ie[-7], "
-	margin-right: 6px
-	zoom: 1
+	@if ie[-7]
+		margin-right: 6px
+		zoom: 1
 
-// ...And they also need inline-block to be reset to inline separately... How annoying.
-.inline-block
-	display: inline")
+	// ...And they also need inline-block to be reset to inline separately... How annoying.
+	.inline-block
+		display: inline
+	@endif
 
 // A descriptive style
 .plainbox virtual
@@ -38,17 +39,16 @@
 	background-color: #e5e5e8
 
 // A common clearfix hack for float parents, in case setting overflow: hidden on the parent isn't enough for you.
-@is (ie[-7], '
 .clearfix virtual
-	zoom: 1
-', '
-.clearfix virtual
-	:before, :after
-		content: ""
-		display: table
-	:after
-		clear: both
-')
+	@if ie[-7]
+		zoom: 1
+	@else
+		:before, :after
+			content: ""
+			display: table
+		:after
+			clear: both
+	@endif
 
 .vertical-arrow virtual
 	:after
